Avoid setting sash resize cursor when mouse is still over border of second pane with wxGTK This made it possible to have the resize cursor, but not be able to drag the sash, and happened because wxGTK sends a leave event when mouse leaves client area instead of outer border of window. Setting the useless SashHitTest() "tolerance" parameter to zero avoids the problem. Fixes #1397

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73110 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775